created ProductList component

--- a/BlazorECommerceCourse/Client/_Imports.razor
+++ b/BlazorECommerceCourse/Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using BlazorECommerceCourse.Client
 @using BlazorECommerceCourse.Client.Shared
+@using BlazorECommerceCourse.Shared
