--- a/BlazorECommerceCourse/Client/_Imports.razor
+++ b/BlazorECommerceCourse/Client/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorECommerceCourse.Client
+@using BlazorECommerceCourse.Client.Services.ProductService
 @using BlazorECommerceCourse.Client.Shared
 @using BlazorECommerceCourse.Shared
