--- a/BlazorECommerceCourse/Client/wwwroot/css/app.css
+++ b/BlazorECommerceCourse/Client/wwwroot/css/app.css
@@ -106,6 +106,10 @@ a, .btn-link {
     color: green;
 }
 
+.original-price{
+    text-decoration: line-through;
+}
+
 @media (max-width: 1023.98px){
     .media{
         flex-direction: column;
