--- a/BlazorECommerceCourse/Client/Pages/Index.razor
+++ b/BlazorECommerceCourse/Client/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @page "/{categoryUrl}"
+@page "/search/{searchText}"
 @inject IProductService _productService
 
 <PageTitle>My Shop</PageTitle>
@@ -10,8 +11,15 @@
 
     [Parameter]
     public string? CategoryUrl { get; set; } = null;
+    [Parameter]
+    public string? SearchText { get; set; } = null;
 
-    protected override async Task OnParametersSetAsync() =>
-        await _productService.GetProducts(CategoryUrl);
+    protected override async Task OnParametersSetAsync()
+    {
+        if (SearchText is not null)
+            await _productService.SearchProducts(SearchText);
+        else
+            await _productService.GetProducts(CategoryUrl);
+    }
 
 }
