created FeaturedProducts component, changed index page components depending on url parameters

--- a/BlazorECommerceCourse/Client/Pages/Index.razor
+++ b/BlazorECommerceCourse/Client/Pages/Index.razor
@@ -5,7 +5,14 @@
 
 <PageTitle>My Shop</PageTitle>
 
-<ProductList />
+@if (CategoryUrl is null && SearchText is null)
+{
+    <FeaturedProducts />
+}
+else
+{
+    <ProductList />
+}
 
 @code{
 
