--- a/BlazorECommerceCourse/Client/wwwroot/css/app.css
+++ b/BlazorECommerceCourse/Client/wwwroot/css/app.css
@@ -102,6 +102,11 @@ a, .btn-link {
     text-align: center;
 }
 
+.page-selection {
+    margin-right: 15px;
+    margin-bottom: 30px;
+}
+
 .price{
     color: green;
 }
