--- a/BlazorECommerceCourse/Client/_Imports.razor
+++ b/BlazorECommerceCourse/Client/_Imports.razor
@@ -7,7 +7,9 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorECommerceCourse.Client
+@using BlazorECommerceCourse.Client.Services.CartService
 @using BlazorECommerceCourse.Client.Services.CategoryService
 @using BlazorECommerceCourse.Client.Services.ProductService
 @using BlazorECommerceCourse.Client.Shared
 @using BlazorECommerceCourse.Shared
+@using Blazored.LocalStorage
