--- a/BlazorECommerceCourse/Client/Shared/UserButton.razor
+++ b/BlazorECommerceCourse/Client/Shared/UserButton.razor
@@ -9,6 +9,8 @@
     <div class="dropdown-menu dropdown-menu-end @_userMenuCssClass">
         <AuthorizeView>
             <Authorized>
+                <a href="profile" class="dropdown-item">Profile</a>
+                <hr />
                 <button class="dropdown-item" @onclick="Logout">Logout</button>
             </Authorized>
             <NotAuthorized>
