--- a/BlazorECommerceCourse/Client/Pages/Cart.razor
+++ b/BlazorECommerceCourse/Client/Pages/Cart.razor
@@ -37,7 +37,7 @@ else
 
 @code {
 
-    private List<CartProductDto>? _cartProducts;
+    private List<CartProductResponse>? _cartProducts;
     string _message = "Loading cart...";
 
     protected override async Task OnInitializedAsync() =>
@@ -60,7 +60,7 @@ else
         }
     }
 
-    private async Task UpdateQuantity(ChangeEventArgs e, CartProductDto product)
+    private async Task UpdateQuantity(ChangeEventArgs e, CartProductResponse product)
     {
         product.Quantity = int.Parse(e.Value.ToString());
         if (product.Quantity < 1)
