--- a/BlazorECommerceCourse/Client/Shared/CartCounter.razor
+++ b/BlazorECommerceCourse/Client/Shared/CartCounter.razor
@@ -11,8 +11,8 @@
 
     private int GetCartItemsCount()
     {
-        var cart = _localStorage.GetItem<List<CartItem>>("cart");
-        return cart is not null ? cart.Count : 0;
+        var count = _localStorage.GetItem<int>("cartItemsCount");
+        return count;
     }
 
     protected override void OnInitialized() =>
