--- a/BlazorECommerceCourse/Client/_Imports.razor
+++ b/BlazorECommerceCourse/Client/_Imports.razor
@@ -12,6 +12,7 @@
 @using BlazorECommerceCourse.Client.Services.AuthService
 @using BlazorECommerceCourse.Client.Services.CartService
 @using BlazorECommerceCourse.Client.Services.CategoryService
+@using BlazorECommerceCourse.Client.Services.OrderService
 @using BlazorECommerceCourse.Client.Services.ProductService
 @using BlazorECommerceCourse.Client.Shared
 @using BlazorECommerceCourse.Shared
