Add Address features

--- a/BlazorECommerceCourse/Client/Pages/Cart.razor
+++ b/BlazorECommerceCourse/Client/Pages/Cart.razor
@@ -1,6 +1,7 @@
 ﻿@page "/cart"
 @inject ICartService _cartService
 @inject IOrderService _orderService
+@inject IAuthService _authService
 @inject NavigationManager _navigationManager
 
 <PageTitle>Shopping Cart</PageTitle>
@@ -35,6 +36,13 @@ else
             Total (@_cartProducts.Count): $@_cartProducts.Sum(x => x.Price * x.Quantity)
         </div>
     </div>
+    @if (_isAuthenticated)
+    {
+        <div>
+            <h5>Delivery Address</h5>
+            <AddressForm />
+        </div>
+    }
     <button @onclick="PlaceOrder" class="btn alert-success float-end mt-1">Checkout</button>
 }
 
@@ -42,9 +50,14 @@ else
 
     private List<CartProductResponse>? _cartProducts;
     string _message = "Loading cart...";
+    bool _isAuthenticated = false;
 
-    protected override async Task OnInitializedAsync() =>
+    protected override async Task OnInitializedAsync()
+    {
+        _isAuthenticated = await _authService.IsUserAuthenticated();
         await LoadCart();
+    }
+        
 
     private async Task RemoveProductFromCart(int productId, int productTypeId)
     {
