--- a/BlazorECommerceCourse/Client/_Imports.razor
+++ b/BlazorECommerceCourse/Client/_Imports.razor
@@ -14,6 +14,7 @@
 @using BlazorECommerceCourse.Client.Services.CategoryService
 @using BlazorECommerceCourse.Client.Services.OrderService
 @using BlazorECommerceCourse.Client.Services.ProductService
+@using BlazorECommerceCourse.Client.Services.AddressService
 @using BlazorECommerceCourse.Client.Shared
 @using BlazorECommerceCourse.Shared
 @using Blazored.LocalStorage
