--- a/BlazorECommerceCourse/Client/Shared/UserButton.razor
+++ b/BlazorECommerceCourse/Client/Shared/UserButton.razor
@@ -13,6 +13,7 @@
                 <a href="profile" class="dropdown-item">Profile</a>
                 <a href="orders" class="dropdown-item">Orders</a>
                 <hr />
+                <AdminMenu />
                 <button class="dropdown-item" @onclick="Logout">Logout</button>
             </Authorized>
             <NotAuthorized>
