--- a/BlazorECommerceCourse/Client/Pages/Admin/Products.razor
+++ b/BlazorECommerceCourse/Client/Pages/Admin/Products.razor
@@ -1,5 +1,6 @@
 ﻿@page "/admin/products"
 @inject IProductService _productService
+@inject NavigationManager _navigationManager
 @attribute [Authorize(Roles = "Admin")]
 
 <h3>Products</h3>
@@ -10,6 +11,9 @@
 }
 else
 {
+    <button class="btn btn-primary float-end" @onclick="CreateProduct">
+        <i class="oi oi-plus"></i> Add new product
+    </button>
     <table class="table">
         <thead>
             <tr>
@@ -61,7 +65,12 @@ else
 
     private void EditProduct(int productId)
     {
+        _navigationManager.NavigateTo($"admin/product/{productId}");
+    }
 
+    private void CreateProduct()
+    {
+        _navigationManager.NavigateTo($"admin/product");
     }
 
 }
